# WCA_Scorecards

./: .gitignore  Cargo.toml  OdsherredForarscubing2022stationNumbers.csv  OdsherredForarscubing2022timeLimits.csv  README.md  pyproject.toml
files/: OdsherredForarscubing2022stationNumbers.csv  OdsherredForarscubing2022stationNumbers0414_230659.csv  OdsherredForarscubing2022timeLimits.csv  language.csv
scorecards/: Cargo.toml
scorecards/src/: language.rs  lib.rs
scorecards/src/localhost/: html.rs  mod.rs
scorecards/src/pdf/: font.rs  mod.rs  scorecard.rs
scorecards/src/wcif/: json.rs  mod.rs  oauth.rs
src/: language.rs  lib.rs  main.rs
src/pdf/: mod.rs  scorecard.rs
