[package]
name = "wca_scorecards"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wca_scorecards_lib = { git = "https://github.com/Daniel-Anker-Hermansen/WCA_tools_lib" }
#wca_scorecards_lib = { path = "../WCA_tools_lib/wca_scorecards_lib"}
