[package]
name = "wca_scorecards"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
wca_scorecards_lib = { git = "https://github.com/Daniel-Anker-Hermansen/WCA_tools_lib", commit = "ddeb711698c4c30366cb1c49b989205f3d39c91c" }
